# vylix

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  gitignore
arch/aarch64/: boot.S  boot_arm64.S  linker.ld
arch/x86_64/: boot.S  linker.ld
kernel/: example.cpp  kmain.cpp  kmain1.cpp
rust_core/: Cargo.toml
rust_core/src/: lib.rs
