[package]

name = "vylix_rust"
version = "0.1.0"
edition = "2021"
authors = ["Nguyen Duc Tue <ilcde>"]

[lib]

name = "vylix_rust"
crate-type = ["staticlib"] # Publish to a .a file for C++ linking

[dependencies]

[profile.release]

panic = "abort" # Kernel does not have an unwind stack mechanism like a typical OS
lto = true # Optimize size